--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,56 @@
 {
-  "extends": "next/core-web-vitals"
+  "plugins": ["react","@typescript-eslint", "prettier", "import", "testing-library"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    "prettier/prettier": ["error", {
+      "printWidth": 120,
+      "tabWidth": 2,
+      "singleQuote": true,
+      "trailingComma": "all",
+      "proseWrap": "always",
+      "endOfLine": "auto"
+    }],
+    "import/order": [
+      "error",
+      {
+        "groups": [["external", "builtin"], ["parent","internal"], ["index", "sibling"]],
+        "newlines-between": "always"
+      }
+    ],
+    "no-console": "warn",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "moduleDirectory": ["node_modules", "src/"],
+        "extensions": [".ts", ".tsx"]
+      }
+    },
+    "react": {
+      "version": "detect"
+    }
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/?(*.)+(spec|test).[jt]s?(x)"
+      ],
+      "extends": ["plugin:testing-library/react"]
+    },
+    {
+      "files": "next.config.js",
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
