--- a/package.json
+++ b/package.json
@@ -1,22 +1,50 @@
 {
-  "name": "tarot",
+  "name": "beer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --fix {src,test}/**/*.{js,ts,jsx,tsx} --no-error-on-unmatched-pattern",
+    "style": "prettier --write {src,test}/**/* ./*.{json,*.json} !package-lock.json -u --no-error-on-unmatched-pattern",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "lint-staged": {
+      "{src,test}/**/*.{js,ts,jsx,tsx}": [
+        "eslint --fix",
+        "prettier --write -u"
+      ],
+      "!**/*.{js,ts,jsx,tsx}": "prettier --write -u"
+    }
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.10.9",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.11.0",
     "next": "13.4.4",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "stringify": "^5.2.0",
+    "styled-components": "^5.3.10"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "typescript": "^5.1.3"
   }
 }
