--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.10.9",
+    "@mui/styles": "^5.14.11",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
